Text Decoration Underline not working on safari fix

--- a/Frontend/src/css/App.css
+++ b/Frontend/src/css/App.css
@@ -382,7 +382,7 @@ margin-top: 16px;
   }
 
   .item-detail-user{
-    text-decoration: underline 4px #fff !important;
+    text-decoration: underline #fff 4px  !important;
 
   }
 
